samples/_failures_safe/1761524512_5eb5e8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f3e8542c.c: In function ‘main’:
./samples/SAFE/__tmp_f3e8542c.c:173:5: error: expected expression at end of input
  173 |     while (token_count <
      |     ^~~~~
./samples/SAFE/__tmp_f3e8542c.c:173:5: error: expected declaration or statement at end of input
